--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,2 @@
 PORT=":4000"
-HOST="localhost"
-USER ="admin"
-PASSWORD = "passwd"
-DBNAME = "postgres"
-DBPORT = "5010"
-SSLMODE= "disable"
-TIMEZONE="Asia/Kolkata"
+ElephantSqlURI = "postgres://bxaszver:g1BgXs9D-TibMFX1WygrpVMtsOgJehT3@tiny.db.elephantsql.com/bxaszver"
