--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=":4000"
-ElephantSqlURI = "postgres://bxaszver:g1BgXs9D-TibMFX1WygrpVMtsOgJehT3@tiny.db.elephantsql.com/bxaszver"
+ElephantSqlURI = "postgres://kvshbljz:vGjeTZq5KxQ4V0FDWMt6Zrv-2w0EXWfr@tiny.db.elephantsql.com/kvshbljz"
