--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=":4000"
-ElephantSqlURI = "postgres://kvshbljz:vGjeTZq5KxQ4V0FDWMt6Zrv-2w0EXWfr@tiny.db.elephantsql.com/kvshbljz"
-jwtKey = "DxK8gbTHD0DbJFVBIkEgs2amPwOKhlVPsWamPK_1byU="
+ElephantSqlURI = "postgres://opnlbare:U7a6cVsvfV30tra_2L31psYm9Wezh3T5@john.db.elephantsql.com/opnlbare"
+jwtKey = "DxK8gbTHD0DbJFVBIkEgs2am"
