--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@testing-library/user-event": "^13.2.1",
     "@windmill/react-ui": "^0.6.0",
     "axios": "^1.4.0",
+    "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.0",
     "windmill": "^0.1.3"
   },
