--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=":4000"
-ElephantSqlURI = "postgres://opnlbare:U7a6cVsvfV30tra_2L31psYm9Wezh3T5@john.db.elephantsql.com/opnlbare"
+ElephantSqlURI = "postgres://efftykty:ZJ6vbB8kGq1702PX8ghggM3OZvAS33TW@tiny.db.elephantsql.com/efftykty"
 jwtKey = "DxK8gbTHD0DbJFVBIkEgs2am"
